--- a/deberes/02-deber-rest/server/package.json
+++ b/deberes/02-deber-rest/server/package.json
@@ -1,24 +1,18 @@
 {
-  "name": "server",
+  "name": "api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc -w",
-    "dev": "nodemon build/index.js"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "morgan": "^1.10.0",
-    "promise-mysql": "^5.0.4"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.13",
+    "mongoose": "^6.1.1",
     "nodemon": "^2.0.15"
   }
 }
