--- a/deberes/02-deber-rest/server/package.json
+++ b/deberes/02-deber-rest/server/package.json
@@ -7,9 +7,10 @@
     "start": "nodemon app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Diego Marquez",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongodb": "^4.2.2",
